<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.authenticate.PersonalDataFill">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200sp"/>
        <TextView
            android:paddingTop="20sp"
            android:text="Sign Up"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingTop="20sp"
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:inputType="text"/>
        <TextView
            android:paddingTop="20sp"
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:inputType="textEmailAddress"/>
        <TextView
            android:paddingTop="20sp"
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:inputType="textPassword"
            />
        <TextView
            android:paddingTop="20sp"
            android:layout_marginStart="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_confirmation"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:inputType="textPassword"
            />
        <Button
            android:layout_marginTop="30sp"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>