<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.authenticate.Login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/skip_button"
                android:text="@string/skip"
                android:paddingTop="35sp"
                android:paddingEnd="25sp"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/email"
                android:paddingTop="200sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/input_email"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="email"
                tools:ignore="LabelFor" />
            <TextView
                android:text="@string/password"
                android:paddingTop="50sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/the_passwored_that_i_got"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints="password"
                tools:ignore="LabelFor" />
            <LinearLayout
                android:paddingTop="40sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/signupBbutton"
                    android:layout_marginEnd="20sp"
                    android:text="@string/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#398F6A"

                    />
                <Button
                    android:id="@+id/ButtonLogin"
                    android:layout_marginStart="20sp"
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#398F6A"

                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            </LinearLayout>
        </LinearLayout>
    </ScrollView>




</RelativeLayout>