<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:text="@string/email"
                android:paddingTop="200sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/in_for_email"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:autofillHints="email"
                tools:ignore="LabelFor" />
            <TextView
                android:text="@string/password"
                android:paddingTop="50sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/in_for_psw"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:autofillHints="password"
                tools:ignore="LabelFor" />
            <LinearLayout
                android:paddingTop="40sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/ke_sign_up"
                    android:layout_marginEnd="20sp"
                    android:text="@string/sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFA500"

                    />
                <Button
                    android:id="@+id/ke_login"
                    android:layout_marginEnd="20sp"
                    android:text="@string/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFA500"

                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>