<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical"
            android:padding="50dp">
            <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/printer_name"/>
            <EditText
                android:id="@+id/nameoftheprinter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text2"
                android:padding="8dp"
                android:hint="@string/printer_name"/>
            <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Printer Picture"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:gravity="bottom">
                <ImageView
                    android:id="@+id/the_sample"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:background="@drawable/custom_edit_text2"
                    android:padding="8dp"

                    />
                <Button
                    android:id="@+id/go_to_file"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/green_lime"
                    android:text="File"/>
            </LinearLayout>
            <TextView
                android:id="@+id/image_name"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text= "@string/printer_price"/>
            <EditText
                android:id="@+id/the_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:background="@drawable/custom_edit_text2"
                android:padding="8dp"
                android:hint="@string/printer_price"/>
            <TextView
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/printer_location"/>
            <EditText
                android:id="@+id/printer_lokasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edit_text2"
                android:padding="8dp"
                android:hint="@string/printer_locations"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"/>
            <Button
                android:id="@+id/launch_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/green_lime"
                android:text="Add Printer"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>